# miniGPT

./: .gitignore  README.md  cli.py  config.py  pyproject.toml
data/: dataset.py  prepare.py
inference/: generate.py  load_weights.py
model/: gpt.py
tests/: conftest.py  test_config.py  test_data.py  test_generate.py  test_model.py  test_server.py  test_trainer.py
train/: ddp_trainer.py  modal_train.py  trainer.py
ui/: index.html  server.py
