[project]
name = "sair-minigpt"
version = "0.1.0"
description = "SAIR miniGPT — a full-stack hackable GPT system from training to UI"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "transformers>=4.40.0",
    "pymupdf>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "modal>=0.62.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
sair = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pytest>=9.0.3",
    "httpx>=0.28.1",
]
